--- a/scss/components/buttons.scss
+++ b/scss/components/buttons.scss
@@ -57,13 +57,6 @@
 }
 
 
-.btn-icon{
-  padding: 0.375rem;
-  & > *{
-    font-size: 1.5rem;
-  }
-}
-
 .btn-primary {
 	@include kent-button-variant($btn-primary-color, $btn-primary-bg, $btn-primary-border);
 }
@@ -107,6 +100,18 @@
 	font-size: 1.4rem;
 	line-height: 1rem;
 	padding: .5rem;
+}
+
+
+.btn-icon{
+	padding: 0;
+	&:before{
+		font-size: 1.5rem;
+		line-height: 1.5rem;
+	}
+	&:hover,&:active,&:focus{
+		text-decoration: none;
+	}
 }
 
 .input-group-lg > .input-group-btn > .btn.btn-icon,
